--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -5,9 +5,13 @@
     <hr class="text-white">
 
     <div class="list-group list-reset">
-      <button class="list-group-item list-group-item-action">
-        Valorant
+
+      <!--Aqui inyectar el Ngfor-->
+      <button class="list-group-item list-group-item-action" *ngFor="let tag of tags">
+        {{ tag | titlecase }}
       </button>
+
     </div>
+
 
 </div>
