Agregar funcionalidad al sidebar de que los botones nos muestren su contenido

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -7,11 +7,14 @@
     <div class="list-group list-reset">
 
       <!--Aqui inyectar el Ngfor-->
-      <button class="list-group-item list-group-item-action" *ngFor="let tag of tags">
+      <button
+        class="list-group-item list-group-item-action"
+        *ngFor="let tag of tags"
+        (click)="searchTag(tag)"
+      >
         {{ tag | titlecase }}
       </button>
 
     </div>
-
 
 </div>
